# general-nn

./: README.md  pyproject.toml
src/: main.py  models.py  stratified_split.py  weights.py
src/data/: EuroMillions_numbers.csv
src/gru_nn/: README.md  constants.py  draw_utils.py  gumbel.py  main.py
src/lstm_nn/: main.py
